Fix 403 error for API Releases issue.  Fixed Label center.  Fixed code pre-wrap issue with readme markdown.

--- a/src/style.css
+++ b/src/style.css
@@ -499,7 +499,7 @@ li::marker {
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05 whitespace-pre-wrap;
 }
 
 .markdown pre {
